fixed nav and avoid overlap class

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,7 @@ form {
   width: 500px;
   margin: 0 auto;
 }
+
+.avoid-nav-overlap {
+  margin-top: 80px;
+}
